fixed z-index issue with cropped images

--- a/index.css
+++ b/index.css
@@ -267,6 +267,7 @@ a:visited {
   width: 250px;
   height: 250px;
   overflow: hidden;
+  z-index: 1;
 }
 
 .cropped img {
@@ -280,6 +281,7 @@ a:visited {
   width: 100px;
   height: 100px;
   overflow: hidden;
+  z-index: 1;
 }
 .croppedsmall img {
   width: 400%;
@@ -291,7 +293,7 @@ a:visited {
 #navbarAndLogin {
   position: sticky;
   top: 0;
-  
+  z-index: 10;
 }
 
 .navbarUL {
